# async-abc-paper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  nastjapy_copy  propulate  pyproject.toml
.claude/: CLAUDE.md  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.plans/: bughunt-07-04-26.md  comparison_methods_plan.md  cpm_benchmark_tdd_plan.md  experiments_tdd_plan.md  extended_experiments_tdd_plan.md  fix-allreduce-sync-barrier.md  fix-experiment-issues-010426.md  measurement_plot_semantics_fix_summary.md  mip-lifecycle-fix-plan.md  plotting-measurement-fix-tdd-plan.md  possible_bug.md  revert-pyabc-walltime-plan.md  run1_replicate_audit.md  run4_findings_and_tdd_plan.md  sbc_tdd_plan.md  scaling_cpm_plan.md  sensitivity_rework.md
.plans/bug-fixes/: previous-fixes.md
.plans/diagnose/: commworldmap-48rank-verification.md  mpi-evaluation.md
.plans/ressources/: async-abc.md  experiment_code_checklist.md  paper-concept.md
experiments/: run_all_paper_experiments.py
experiments/async_abc/: __init__.py
experiments/configs/: ablation.json  cellular_potts.json  gandk.json  gaussian_mean.json  lotka_volterra.json  runtime_heterogeneity.json  sbc.json  scaling.json  scaling_cpm.json  sensitivity.json  sensitivity_gandk.json  straggler.json
experiments/jobs/: run_experiments.sh  scaling_cpm_packed.sh  scaling_cpm_single.sh  scaling_packed.sh  scaling_single.sh  submit_replicate_shards.py  submit_scaling.py  submit_scaling.sh  submit_scaling_cpm.py  test_all.sh  test_sharded.sh  test_sharded_slurm.sh  verify_commworldmap_48.sh
experiments/scripts/: ablation_runner.py  cellular_potts_runner.py  gandk_runner.py  replot.py  (+11 more)
(+118 files in other folders)
