[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "async-abc-paper"
version = "0.1.0"
description = "Experiment library for the async-ABC paper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.24,<3",
    "pandas>=1.5",
    "POT>=0.8",
    "scipy>=1.10",
]

[project.optional-dependencies]
pyabc = ["pyabc"]
propulate = ["propulate"]
mpi = ["mpi4py"]
test = ["pytest", "pyabc"]

[project.urls]
Repository = "https://github.com/ju-he/async-abc-paper"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "experiments"

[tool.setuptools.packages.find]
where = ["experiments"]
include = ["async_abc*"]

[tool.pytest.ini_options]
testpaths = ["experiments/tests"]
